--- a/CRUD Operation in JS/index.html
+++ b/CRUD Operation in JS/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <div class="container-fluid">
+    <div class="container">
         <!-- ========== Start HeaderSection ========== -->
         <div class="header">
             <div class="row justify-content-center">
@@ -31,46 +31,17 @@
         <!-- ========== End HeaderSection ========== -->
         <div class="row mt-5 justify-content-evenly mx-1 mx-md-0">
             <!-- ========== Start AddProductSection ========== -->
-            <div class="col-12 col-lg-5 addProductSec py-2 ">
-                <div class="headingSec">
-                    <h3>Add Product</h3>
-                </div>
+            <div class="col-12 addProductSec py-2 ">
                 <div class="bodySec">
-                    <form id="addProductForm">
-                        <div class="row mb-3">
-                            <label for="inputName" class="col-sm-3 col-form-label">Name</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="inputName">
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <label for="inputDescription" class="col-sm-3 col-form-label">Description</label>
-                            <div class="col-sm-9">
-                                <textarea class="form-control" id="inputDescription" rows="3"></textarea>
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <label for="inputPrice" class="col-sm-3 col-form-label">Price</label>
-                            <div class="col-sm-9">
-                                <input type="number" class="form-control" id="inputPrice">
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <label for="inputImage" class="col-sm-3 col-form-label">Image</label>
-                            <div class="col-sm-9">
-                                <input type="file" class="form-control" id="inputImage"
-                                    accept="image/x-png,image/gif,image/jpeg">
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary" id="submitBtn">Add Product</button>
-                    </form>
+                    <button class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#productAdd">Add
+                        Product</button>
                 </div>
             </div>
             <!-- ========== End AddProductSection ========== -->
             <!-- ========== Start ViewProductSection ========== -->
 
             <!-- ========== End ViewProductSection ========== -->
-            <div class="col-12 col-lg-6 viewProductSection mt-4 mt-lg-0 py-2 table-responsive">
+            <div class="col-12  viewProductSection mt-4 mt-lg-0 py-2 table-responsive">
                 <div class="headingSec">
                     <h3>Product List</h3>
                 </div>
@@ -86,7 +57,7 @@
                                 <th scope="col"></th>
                             </tr>
                         </thead>
-                        <tbody id="productData" class="overflow-scroll">
+                        <tbody id="productData" >
 
                         </tbody>
                     </table>
@@ -95,7 +66,7 @@
         </div>
 
 
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="updateProduct" aria-hidden="true">
+        <div class="modal fade" id="productView" tabindex="-1" aria-labelledby="updateProduct" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -103,7 +74,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form id="addProductForm">
+                        <form id="updateProductForm">
                             <div class="row mb-3">
                                 <label for="inputName" class="col-sm-3 col-form-label">Name</label>
                                 <div class="col-sm-9">
@@ -133,20 +104,61 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary" id="updateBtn" onclick="updateData(index)">Save Changes</button>
+                        <button type="submit" class="btn btn-primary" id="updateBtn">Save Changes</button>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="modal fade" id="productAdd" tabindex="-1" aria-labelledby="updateProduct" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="updateProduct">Product Information</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="addProductForm">
+                            <div class="row mb-3">
+                                <label for="inputName" class="col-sm-3 col-form-label">Name</label>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" id="inputName">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label for="inputDescription" class="col-sm-3 col-form-label">Description</label>
+                                <div class="col-sm-9">
+                                    <textarea class="form-control" id="inputDescription" rows="3"></textarea>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label for="inputPrice" class="col-sm-3 col-form-label">Price</label>
+                                <div class="col-sm-9">
+                                    <input type="number" class="form-control" id="inputPrice">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label for="inputImage" class="col-sm-3 col-form-label">Image</label>
+                                <div class="col-sm-9">
+                                    <input type="file" class="form-control" id="inputImage"
+                                        accept="image/x-png,image/gif,image/jpeg">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary" id="submitBtn">Add Product</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
 
-    <!-- Custom JS -->
-    <script src="./js/app.js"></script>
+        <!-- Custom JS -->
+        <script src="./js/app.js"></script>
 </body>
 
 </html>
