--- a/CRUD Operation in JS/index.html
+++ b/CRUD Operation in JS/index.html
@@ -29,35 +29,45 @@
             </div>
         </div>
         <!-- ========== End HeaderSection ========== -->
-        <div class="row mt-5 justify-content-evenly mx-1 mx-md-0">
+        <div class="row mt-5 justify-content-evenly mx-1">
             <!-- ========== Start AddProductSection ========== -->
-            <div class="col-12 addProductSec py-2 ">
-                <div class="bodySec">
-                    <button class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#productAdd">Add
-                        Product</button>
+            <div class="col-12 addProductSec py-2">
+                <div class="bodySec px-2 g-2 row d-flex justify-content-between">
+                    <div class="searchbar col-12 col-sm-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-search" viewBox="0 0 16 16">
+                            <path
+                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                        </svg>
+                        <input type="text" id="sortInput" onkeyup="searchProduct()" placeholder="Search for products">
+                    </div>
+                    <button class="col-6 col-sm-3 col-md-3 col-lg-2 btn btn-primary " data-bs-toggle="modal" data-bs-target="#productAdd">Add
+                        Product
+                    </button>
+
                 </div>
             </div>
             <!-- ========== End AddProductSection ========== -->
             <!-- ========== Start ViewProductSection ========== -->
 
             <!-- ========== End ViewProductSection ========== -->
-            <div class="col-12  viewProductSection mt-4 mt-lg-0 py-2 table-responsive">
+            <div class="col-12  viewProductSection mt-4 py-2 table-responsive">
                 <div class="headingSec">
                     <h3>Product List</h3>
                 </div>
                 <div class="bodySec">
-                    <table class="table table-responsive table-hover ">
+                    <table id="displayTable" class="table table-responsive table-hover">
                         <thead>
                             <tr>
-                                <th scope="col">Id</th>
-                                <th scope="col">Name</th>
-                                <th scope="col">Description</th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Image</th>
-                                <th scope="col"></th>
+                                <th scope="col" onclick="sortData(0)" width="5%">Id</th>
+                                <th scope="col" onclick="sortData(1)" width="20%">Name</th>
+                                <th scope="col" width="30%">Description</th>
+                                <th scope="col" onclick="sortData(3)" width="10%">Price</th>
+                                <th scope="col" width="25%">Image</th>
+                                <th scope="col" width="10%"></th>
                             </tr>
                         </thead>
-                        <tbody id="productData" >
+                        <tbody id="productData">
 
                         </tbody>
                     </table>
@@ -65,6 +75,54 @@
             </div>
         </div>
 
+        <!-- ========== Start AddProductSection ========== -->
+
+        <div class="modal fade" id="productAdd" tabindex="-1" aria-labelledby="updateProduct" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="updateProduct">Product Information</h1>
+                    </div>
+                    <div class="modal-body">
+                        <form id="addProductForm">
+                            <div class="row mb-3">
+                                <label for="inputName" class="col-sm-3 col-form-label">Name</label>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" id="inputName">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label for="inputDescription" class="col-sm-3 col-form-label">Description</label>
+                                <div class="col-sm-9">
+                                    <textarea class="form-control" id="inputDescription" rows="3"></textarea>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label for="inputPrice" class="col-sm-3 col-form-label">Price</label>
+                                <div class="col-sm-9">
+                                    <input type="number" class="form-control" id="inputPrice">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label for="inputImage" class="col-sm-3 col-form-label">Image</label>
+                                <div class="col-sm-9">
+                                    <input type="file" class="form-control" id="inputImage"
+                                        accept="image/x-png,image/gif,image/jpeg">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" id="close" class="btn btn-secondary"
+                            data-bs-dismiss="modal">Close</button>
+                        <button type="submit" data-toggle="toast" data-target="#toast1" class="btn btn-primary"
+                            onclick="addProduct()">Add Product</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- ========== End AddProductSection ========== -->
+        <!-- ========== Start viewProductSection ========== -->
 
         <div class="modal fade" id="productView" tabindex="-1" aria-labelledby="updateProduct" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
@@ -101,56 +159,23 @@
                                 </div>
                             </div>
                         </form>
+                        <div id="viewImage">
+
+                        </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary" id="updateBtn">Save Changes</button>
+                        <button type="button" id="closeBtn" class="btn btn-secondary"
+                            data-bs-dismiss="modal">Close</button>
+                        <button type="button" data-toggle="toast" data-target="#toast2" class="btn btn-primary"
+                            id="updateBtn">Save Changes</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="productAdd" tabindex="-1" aria-labelledby="updateProduct" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="updateProduct">Product Information</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form id="addProductForm">
-                            <div class="row mb-3">
-                                <label for="inputName" class="col-sm-3 col-form-label">Name</label>
-                                <div class="col-sm-9">
-                                    <input type="text" class="form-control" id="inputName">
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <label for="inputDescription" class="col-sm-3 col-form-label">Description</label>
-                                <div class="col-sm-9">
-                                    <textarea class="form-control" id="inputDescription" rows="3"></textarea>
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <label for="inputPrice" class="col-sm-3 col-form-label">Price</label>
-                                <div class="col-sm-9">
-                                    <input type="number" class="form-control" id="inputPrice">
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <label for="inputImage" class="col-sm-3 col-form-label">Image</label>
-                                <div class="col-sm-9">
-                                    <input type="file" class="form-control" id="inputImage"
-                                        accept="image/x-png,image/gif,image/jpeg">
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary" id="submitBtn">Add Product</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!-- ========== End viewProductSection ========== -->
+
+
+
 
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
