--- a/CRUD Operation in JS/index.html
+++ b/CRUD Operation in JS/index.html
@@ -20,20 +20,19 @@
 
     <div class="container">
         <!-- ========== Start HeaderSection ========== -->
-        <div class="header">
+        <div class="header my-5">
             <div class="row justify-content-center">
-                <div class="col text-center ">
-                    <h2>CRUD Operation Using JavaScript</h2>
-                    <h3>Product Management System</h3>
+                <div class="col text-center text-white ">
+                    <h1>Product Management System</h1>
                 </div>
             </div>
         </div>
         <!-- ========== End HeaderSection ========== -->
         <div class="row mt-5 justify-content-evenly mx-1">
             <!-- ========== Start AddProductSection ========== -->
-            <div class="col-12 addProductSec py-2">
+            <div class="col-12 addProductSec bg-light py-2">
                 <div class="bodySec px-2 g-2 row d-flex justify-content-between">
-                    <div class="searchbar col-12 col-sm-4">
+                    <div class="searchbar col-12 col-sm-6">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-search" viewBox="0 0 16 16">
                             <path
@@ -41,7 +40,8 @@
                         </svg>
                         <input type="text" id="sortInput" onkeyup="searchProduct()" placeholder="Search for products">
                     </div>
-                    <button class="col-6 col-sm-3 col-md-3 col-lg-2 btn btn-primary " data-bs-toggle="modal" data-bs-target="#productAdd">Add
+                    <button class="col-6 col-sm-3 col-md-3 col-lg-2 btn  " data-bs-toggle="modal"
+                        data-bs-target="#productAdd">Add
                         Product
                     </button>
 
@@ -56,13 +56,31 @@
                     <h3>Product List</h3>
                 </div>
                 <div class="bodySec">
-                    <table id="displayTable" class="table table-responsive table-hover">
+                    <table id="displayTable" class="table table-striped table-responsive table-hover">
                         <thead>
                             <tr>
-                                <th scope="col" onclick="sortData(0)" width="5%">Id</th>
-                                <th scope="col" onclick="sortData(1)" width="20%">Name</th>
+                                <th scope="col" onclick="sortData(0)" width="5%">Id <svg
+                                        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                            d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
+                                    </svg>
+                                </th>
+                                <th scope="col" onclick="sortData(1)" width="20%">Name <svg
+                                        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                            d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
+                                    </svg>
+                                </th>
                                 <th scope="col" width="30%">Description</th>
-                                <th scope="col" onclick="sortData(3)" width="10%">Price</th>
+                                <th scope="col" onclick="sortData(3)" width="10%">Price <svg
+                                        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                            d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
+                                    </svg>
+                                </th>
                                 <th scope="col" width="25%">Image</th>
                                 <th scope="col" width="10%"></th>
                             </tr>
