--- a/CRUD Operation in JS/index.html
+++ b/CRUD Operation in JS/index.html
@@ -104,6 +104,9 @@
 
                         </tbody>
                     </table>
+                    <div class="emptyProductList text-center">
+                        
+                    </div>
                 </div>
             </div>
         </div>
@@ -211,7 +214,7 @@
         </div>
         <!-- ========== End viewProductSection ========== -->
 
-        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div class="toast-container position-fixed top-0 end-0 p-3">
             <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="toast-header">
                     <strong class="me-auto">Product Status</strong>
