--- a/CRUD Operation in JS/index.html
+++ b/CRUD Operation in JS/index.html
@@ -40,7 +40,10 @@
                         </svg>
                         <input type="text" id="sortInput" onkeyup="searchProduct()" placeholder="Search for products">
                     </div>
-                    <button class="col-6 col-sm-3 col-md-3 col-lg-2 btn  " data-bs-toggle="modal"
+                    <button class="col-5 col-sm-3 col-md-2 col-lg-2 btn bg-danger text-white" onclick="clearList()"  >
+                        Delete All
+                    </button>
+                    <button class="col-6 col-sm-3 col-md-3 col-lg-2 btn   " data-bs-toggle="modal"
                         data-bs-target="#productAdd">Add
                         Product
                     </button>
